--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.tar
 *.sh
 *.txt
+!requirements.txt
 *.ipynb
 *.zip
 *.eps
@@ -206,3 +207,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# LMDB output folders
+train_lmdb
+val_lmdb
