--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ joblib==1.4.2
 lmdb==1.5.1
 MarkupSafe==2.1.5
 mpmath==1.3.0
+natsort==8.4.0
 networkx==3.2.1
 nltk==3.9.1
 numpy==2.0.2
@@ -21,6 +22,7 @@ pillow==10.4.0
 pip-upgrader==1.4.15
 regex==2024.9.11
 requests==2.32.3
+six==1.16.0
 sympy==1.13.3
 termcolor==2.4.0
 terminaltables==3.1.10
