--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# data folders
+train_data
+val_data
+
 # LMDB output folders
 train_lmdb
 val_lmdb
